--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.smartcradlesystem">
+    package="com.example.smartcradlesystem" >
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SmartCradleSystem">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.SmartCradleSystem" >
+        <activity android:name=".TemperaturesRoomActivity" />
+        <activity android:name=".TemperaturesActivity" />
+        <activity android:name=".SoundsActivity" />
+        <activity android:name=".PlaylistActivity" />
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
